# mcm_scripts

./: .gitignore  KeepOutputSetFalse.py  ListForForceCompletion-2.py  ListForForceCompletion.py  List_request.py  List_requestMiniAODv3.py  PrintPriority.py  README.md  UpdatePPDTag.py  UpdateTag.py  UpdateTagFastSim.py  UpdateTagJenkins.py  UpdateTagMTD.py  UpdateTagMiniAODv3.py  UpdateTag_check.py  chain_req_forcedone.py  change_priority.py  change_priority2.py  check_requestMiniAOD-Niladri.py  check_requestMiniAOD.py  clone_example.py  create_chained_campaigns.py  create_request.py  das_getter.py  delete_request.py  delete_requestAndChains.py  delete_requestMiniAOD.py  exampleDef.py  executeScriptPrintPriority.py  forceflow_NanoAODv4.py  forceflow_autumn18.py  forceflow_chains.py  forceflow_chainsNotFromList.py  forceflow_nonflowingchains.py  getCookie.sh  get_config_request_data.py  get_requests.py  invalidate_chains.py  invalidate_new_gt.py  invalidate_request.py  (+31 more)
CrossSectionCalculation/: CrossSectionEvaluation.py  runningCrossSection.sh
examples/: README.md  chain_req_forcedone.py  chain_request_resubmission.py  change_priority2.py  clone_example.py  get_requests.py  modify_request.py
src/: rest.py
src/applications/mcm/: core.py
src/client/: README.md  session.py
src/client/auth/: auth_interface.py
src/client/auth/handlers/: README.md  oauth2_tokens.py  session_cookies.py
src/operations/: README.md  create_chained_campaigns.py  invalidate_request.py
src/rest/: __init__.py
src/rest/applications/: base.py
src/rest/applications/mcm/: core.py  invalidate_request.py  resubmission.py
src/rest/applications/rereco/: core.py
src/rest/applications/stats/: core.py
src/rest/client/: session.py
src/rest/client/auth/: auth_interface.py
src/rest/client/auth/handlers/: oauth2_tokens.py  session_cookies.py
src/rest/utils/: logger.py  miscellaneous.py  shell.py
src/utils/: logger.py  shell.py
tests/applications/mcm/: test_invalidate_request.py  test_rest.py  test_resubmission.py
tests/applications/stats/: test_stats.py
tests/client/: README.md  test_session.py
tests/client/auth/handlers/: test_oauth2_tokens_handlers.py  test_session_cookie_handler.py
tests/fixtures/: files.py  mcm.py  oauth.py
tests/utils/: test_shell.py
