[tool.poetry]
name = "pdmv-http-client"
version = "2.0.0"
description = "A HTTP client wrapper to handle authenticated requests to CERN internal applications"
authors = ["PdmV Development Team <pdmv.service@cern.ch>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cms-PdmV/mcm_scripts.git"
packages = [
    {include = "rest", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
mypy = "^1.10.0"
pylint = "^3.2.2"
isort = "^5.13.2"

[tool.isort]
profile = "black"
skip = ["venv"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
pythonpath = [
    "tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"