[build-system]
requires = ["setuptools>=80", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdmv-http-client"
version = "2.0.0"
description = "A HTTP client wrapper to handle authenticated requests to CERN internal applications"
maintainers = [
    {name = "PdmV Service", email = "pdmv.service@cern.ch"},
    {name = "PPD Technical Support", email = "cms-PPD-technical-support@cern.ch"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.1.0",
    "mypy>=1.18.2",
    "pylint>=3.3.9",
    "pytest>=8.4.2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["rest*"]

[tool.isort]
profile = "black"
skip = ["venv"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
pythonpath = [
    "tests"
]
